
[package]
name = "ply"
version = "0.0.0"
authors = ["Pavel Potocek <pavelpotocek@gmail.com>"]
description = "Safe Polygon File Format (PLY) loading library."
keywords = ["PLY"]
documentation = ""
homepage = ""
repository = ""
license = ""

[dependencies]
peg = "^0.1.5"

[dependencies.ply_plugins]
path = "plugins"
version = "*"
