
[package]
name = "ply"
version = "0.0.1"
authors = ["Pavel Potocek <pavelpotocek@gmail.com>"]
description = "Safe Polygon File Format (PLY) loading library."
keywords = ["PLY", "Blender"]
documentation = "https://github.com/potocpav/rust-ply"
homepage =      "https://github.com/potocpav/rust-ply"
repository =    "https://github.com/potocpav/rust-ply"
license = "MIT"

[dependencies]
peg = "^0.1.5"

[dependencies.ply_plugins]
path = "plugins"
version = "*"
